added route "/posts" settings for html and json res

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "router.js",
   "scripts": {
-    "dev": "node router.js"
+    "dev": "nodemon router.js"
   },
   "keywords": [],
   "author": "",
